Add styleguide for icons.

--- a/frontend/src/styles/components/_icons.scss
+++ b/frontend/src/styles/components/_icons.scss
@@ -1,6 +1,13 @@
 // ----------------------------------------------------------------------
-    // Icons
+// Icons
 // ----------------------------------------------------------------------
+
+// Icons
+// 
+// Utilities for your icons. Please use these as often as possible and 
+// add where needed.
+// 
+// Styleguide Components.icons
 
 /**
  * Utility classes for icons
