--- a/frontend/src/styles/components/_content.scss
+++ b/frontend/src/styles/components/_content.scss
@@ -5,7 +5,9 @@
 // Content
 // 
 // Content class is used as the class name for all div tags that
-// contain a design component. Use v-rows and v-columns for
+// contain a design component. Inside of a .content div, if content has
+// margins from the boundary of the page use a v-container to set that
+// margin. USe v-rows and v-cols to structure content.
 // layouts inside the component.
 // 
 // Markup:
