CW-224 Living style guide (#121)
* Add color style guidelines.

* Add colour import to global.

* Add styles to the styleguide.

* Add styles to styleguide.

* Clean typography comments.

* Add buttons style guide.

* Add content living style guide.

* Add kss script.

* Refactor body and html css.

* Refactor showcase to match content css guidelines.

* Add typography style guide.

* Apply style guide to headertitle.

* Apply guidelines to mission section.

* Refactor Home into own folder.

* Remove commented code for mission.

* Change the route to match new Home destination.

* Add margin to the top of titles.

* Remove padding from top.

* Change height value to 100%.

* Refactor showcase out of home.

* Refactor Mission out of home.

* Refactor Sponsor Us out of home.

* Correct imports for components.

* Add styleguide for icons.

* Fix indentation.

* Update HeaderTitle to correct subtitle sizing.

* Update community links to match style guide.

* Fix indentation.

* Simplify testing.

* Simplify testing pt. 2.

* Correct indentation.

* Add page comment.

* Match with Abiram's changes.

* Move EventDisplay to Home views folder.

* Update events in line with style guide.

* Add bottom padding to headers.

* Correct SVG v-img bug.

* Update living style guide.

* Refactor Slideshow into own Vue file.

* Refactor Resources into own Vue file.

* Update views based on refactored components.

--- a/frontend/src/styles/components/_icons.scss
+++ b/frontend/src/styles/components/_icons.scss
@@ -1,6 +1,13 @@
 // ----------------------------------------------------------------------
-    // Icons
+// Icons
 // ----------------------------------------------------------------------
+
+// Icons
+// 
+// Utilities for your icons. Please use these as often as possible and 
+// add where needed.
+// 
+// Styleguide Components.icons
 
 /**
  * Utility classes for icons
@@ -11,8 +18,10 @@
 
 .icon-text-aligner {
     display:flex;
-    align-items:center;
-
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    
     > *:nth-child(2) {
         margin-left: $space-xxs;
     }
