--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,17 +1,17 @@
+@import "abstracts/colours";
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-@import "base/reset";
 @import "base/spacing";
 @import "base/typography";
 
-@import "components/icons";
 @import "components/buttons";
+@import "components/content";
+@import "components/icons";
 @import "components/links";
 
 @import "layout/footer";
 @import "layout/forms";
-@import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
