--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -1,8 +1,10 @@
 // ----------------------------------------------------------------------
 // Layout Breakpoints
 // ----------------------------------------------------------------------
-$maxWidth: 1280;
-$laptop-padding:72px;
+$breakpoint-small: 600px;
+$breakpoint-medium: 960px;
+$breakpoint-large: 1264px;
+$breakpoint-extra: 1904px;
 
 // ----------------------------------------------------------------------
 // Font Sizes and Base Values
