Change type scall to depend on base size variable.

--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -7,13 +7,13 @@
 // ----------------------------------------------------------------------
 // #Type Scale
 // ----------------------------------------------------------------------
-$text-xs: 1em;
-$text-sm: 1em * math.pow($text-scale-ratio, 1);
-$text-md: 1em * math.pow($text-scale-ratio, 2);
-$text-lg: 1em * math.pow($text-scale-ratio, 3);
-$text-xl: 1em * math.pow($text-scale-ratio, 6);
-$text-xxl: 1em * math.pow($text-scale-ratio, 8);
-$text-xxxl: 1em * math.pow($text-scale-ratio, 9);
+$text-xs: $text-base-size;
+$text-sm: $text-base-size * math.pow($text-scale-ratio, 1);
+$text-md: $text-base-size * math.pow($text-scale-ratio, 2);
+$text-lg: $text-base-size * math.pow($text-scale-ratio, 3);
+$text-xl: $text-base-size * math.pow($text-scale-ratio, 6);
+$text-xxl: $text-base-size * math.pow($text-scale-ratio, 8);
+$text-xxxl: $text-base-size * math.pow($text-scale-ratio, 9);
 
 // ----------------------------------------------------------------------
 // #Line Height
@@ -22,7 +22,7 @@ $heading-line-height: 1.5;
 $body-line-height: 2.5;
 
 body {
-  font-size: $text-base-size;
+  font-size: $text-xs;
 }
 
 h1,
