--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -10,6 +10,10 @@ $body-line-height: 2.5;
 
 body {
   font-size: $text-xs;
+
+  @include breakpoint($breakpoint-small) {
+    font-size: 12px;
+  }
 }
 
 h1,
