--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -14,6 +14,9 @@ body {
   @include breakpoint($breakpoint-small) {
     font-size: 12px;
   }
+  @include breakpoint($breakpoint-medium) {
+    font-size: 14px;
+  }
 }
 
 h1,
