--- a/frontend/src/styles/base/_spacing.scss
+++ b/frontend/src/styles/base/_spacing.scss
@@ -1,22 +1,23 @@
 // ----------------------------------------------------------------------
-  // Spacing
+// Spacing
 // ----------------------------------------------------------------------
+@use "sass:math";
 
 // ----------------------------------------------------------------------
-  // #Spacing Values
+// #Spacing Values
 // ----------------------------------------------------------------------
 $space-xxxs: 20px; // 20px on desktop
-$space-xxs: 40px;   // 40px on desktop
-$space-xs: 60px;   // 60px on desktop
-$space-sm: 80px;      // 80px on desktop
-$space-md: 100px;   // 100px on desktop
-$space-lg: 160px;     // 160px on desktop
-$space-xl: 200px;   // 200px on desktop
-$space-xxl: 240px;    // 240px on desktop
-$space-xxxl: 280px;  // 280px on desktop
+$space-xxs: 40px; // 40px on desktop
+$space-xs: 60px; // 60px on desktop
+$space-sm: 80px; // 80px on desktop
+$space-md: 100px; // 100px on desktop
+$space-lg: 160px; // 160px on desktop
+$space-xl: 200px; // 200px on desktop
+$space-xxl: 240px; // 240px on desktop
+$space-xxxl: 280px; // 280px on desktop
 
 // ----------------------------------------------------------------------
-  // #Default Values
+// #Default Values
 // ----------------------------------------------------------------------
 // div {
 //   @include padding(10px, 10px, 10px, 10px);
