CW-234 Reponsive Landing Page (#144)
* Remove outdated preview resouces.

* Readd slideshow component.

* Hide components at lower breakpoints.

* Change breakpoints to match Vuetify's.

* Remove outdated preview resouces.

* Readd slideshow component.

* Hide components at lower breakpoints.

* Change breakpoints to match Vuetify's.

* Optimise showcase image for all screen sizes.

* Change breakpoint to match Vuetify.

* Recalibrate css for rescaled showcase image.

* Remove grid variables.

* Remove breakpoints variables from mixin.

* Change type scall to depend on base size variable.

* Simplify breakpoint mixin.

* Refactor text size variables.

* Introduce use of breakpoints mixin for text size.

* Remove comment.

* Include breakpoint for medium size devices.

* Comment out background image.

* Reinitialise height for mission component.

* Remove small box on smaller screens.

* Add responsive layout to logos and text.

* Create responsive background image.

* Scale images to match container height (#145)

* Remove outdated preview resouces.

* Readd slideshow component.

* Hide components at lower breakpoints.

* Change breakpoints to match Vuetify's.

* Remove outdated preview resouces.

* Readd slideshow component.

* Optimise showcase image for all screen sizes.

* Change breakpoint to match Vuetify.

* Recalibrate css for rescaled showcase image.

* Remove grid variables.

* Remove breakpoints variables from mixin.

* Change type scall to depend on base size variable.

* Simplify breakpoint mixin.

* Refactor text size variables.

* Introduce use of breakpoints mixin for text size.

* Remove comment.

* Include breakpoint for medium size devices.

* Comment out background image.

* Reinitialise height for mission component.

* Remove small box on smaller screens.

* Add responsive layout to logos and text.

* Create responsive background image.

* Change backgr

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -1,19 +1,32 @@
 // ----------------------------------------------------------------------
 // Layout Breakpoints
 // ----------------------------------------------------------------------
-$maxWidth: 1280;
-$laptop-padding:72px;
+$breakpoint-small: 600px;
+$breakpoint-medium: 960px;
+$breakpoint-large: 1264px;
+$breakpoint-extra: 1904px;
 
 // ----------------------------------------------------------------------
-// Font Sizes and Base Values
+// Font Base Values
 // ----------------------------------------------------------------------
 $text-base-size: 1em;
 $text-scale-ratio: 1.25;
 
 // ----------------------------------------------------------------------
-// Grid
+// Spacing Base Values
 // ----------------------------------------------------------------------
-$grid-columns: 12;
-$grid-gap: 40px;
-$gap-horizontal: $grid-gap;
-$gap-vertical: $grid-gap * 3;
+$spacing-base-size: 1em;
+$spacing-scale-ratio:1.25;
+
+// ----------------------------------------------------------------------
+// Media Variables
+// ----------------------------------------------------------------------
+body {
+    @include breakpoint($breakpoint-small) {
+        font-size: 12px;
+    }
+
+    @include breakpoint($breakpoint-medium) {
+        font-size: 14px;
+    }
+}
