Cleaned up style

--- a/frontend/src/styles/abstracts/_colours.scss
+++ b/frontend/src/styles/abstracts/_colours.scss
@@ -1,7 +1,7 @@
 // Main Colors
-// 
+//
 // Colors that inform the main vision
-// 
+//
 // Weight: 1
 //
 // $primary-color - #3333CC; primary blue
@@ -13,19 +13,18 @@
 // $brand-color - #3A75F7; brand blue
 //
 // Styleguide Abstracts.colours.main
-$primary-color: #3333CC;
-$secondary-color-1: #66FFFF;
-$secondary-color-2: #9933CC;
+$primary-color: #3333cc;
+$secondary-color-1: #66ffff;
+$secondary-color-2: #9933cc;
 $dark-color-1: #000033;
 $dark-color-2: #191947;
-$light-color: #FFFFFF;
-$brand-color: #3A75F7;
-
+$light-color: #ffffff;
+$brand-color: #3a75f7;
 
 // Alert Colors
-// 
+//
 // Colors that inform the main vision
-// 
+//
 // Weight: 2
 //
 // $error-color - #FF0066; error
@@ -33,6 +32,6 @@ $brand-color: #3A75F7;
 // $success-color - #00FF66; success
 //
 // Styleguide Abstracts.colours.alert
-$error-color: #FF0066;
-$warning-color: #FF6600;
-$success-color: #00FF66;
+$error-color: #ff0066;
+$warning-color: #ff6600;
+$success-color: #00ff66;
