--- a/frontend/src/styles/components/_icons.scss
+++ b/frontend/src/styles/components/_icons.scss
@@ -3,31 +3,31 @@
 // ----------------------------------------------------------------------
 
 // Icons
-// 
-// Utilities for your icons. Please use these as often as possible and 
+//
+// Utilities for your icons. Please use these as often as possible and
 // add where needed.
-// 
+//
 // Styleguide Components.icons
 
 /**
  * Utility classes for icons
  */
 .icon {
-    color: $light-color
+  color: $light-color;
 }
 
 .icon-text-aligner {
-    display:flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    
-    > *:nth-child(2) {
-        margin-left: $space-xxs;
-    }
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 
-    .icon {
-        color: inherit;
-        flex-shrink: 0;
-    }
+  > *:nth-child(2) {
+    margin-left: $space-xxs;
+  }
+
+  .icon {
+    color: inherit;
+    flex-shrink: 0;
+  }
 }
